# eicdirc

./: .gitignore  CMakeLists.txt  GNUmakefile  PrtDirc.cxx  PrtDirc.mac  README.md  brun  cmakeg  gui.mac  prt.mac  stlloader.C  vis.mac  vis1.mac
data/: MARCO_v.6.4.1.1.3_1.7T_Magnetic_Field_Map_2022_11_14_rad_coords_cm_T.CART.txt  MARCO_v.6.4.1.1.3_2T_Magnetic_Field_Map_2022_11_14_rad_coords_cm_T.CART.txt  tracking_resolution_map_010725.root  tracking_resolution_map_050825.root  tracking_resolution_map_220723.root  tracking_resolution_map_271123.root
macro/: addcanvases.C  b_lut  ba_scan  bad_scan  brun  brun_pie  convert_ind.py  createPdf.C  da_scan.C  drawHP.C  drawMcp.C  draw_digi.C  draw_hp.C  dt_lut.C  dv.C  loadlib.C  lutmean.C  proc_mult.C  prtai_ind.py  recoPdf.C  reco_start_time.C  save.C
macro/tdr_hpdirc/: README.md  create_pdf  plot.C  reconstruct  simulate
src/: PrtActionInitialization.cxx  PrtActionInitialization.h  PrtAmbiguityInfo.cxx  PrtAmbiguityInfo.h  PrtBarHit.cxx  PrtBarHit.h  PrtBarSD.cxx  PrtBarSD.h  PrtCherenkovProcess.cxx  PrtCherenkovProcess.h  PrtDetectorConstruction.cxx  PrtDetectorConstruction.h  PrtDetectorConstructionMessenger.cxx  PrtDetectorConstructionMessenger.h  PrtDirc.cxx  PrtEvent.cxx  PrtEvent.h  PrtEventAction.cxx  PrtEventAction.h  PrtFastSimModelTracker.cxx  PrtFastSimModelTracker.h  PrtField.cxx  PrtField.h  PrtHit.cxx  PrtHit.h  PrtLinkDef.h  PrtLutNode.cxx  PrtLutNode.h  PrtLutReco.cxx  PrtLutReco.h  PrtManager.cxx  PrtManager.h  PrtOpBoundaryProcess.cxx  PrtOpBoundaryProcess.h  PrtPhotonInfo.cxx  PrtPhotonInfo.h  PrtPhysicsList.cxx  PrtPhysicsList.h  PrtPhysicsListMessenger.cxx  PrtPhysicsListMessenger.h  (+28 more)
